--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">MELISSA LI</h1>
+        <h1 class="name">Melissa Li</h1>
       </header>
       <article>
         <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too.</p>
@@ -21,7 +21,7 @@
     <footer>
       <ul class="meta inline-list">
         <li><a href="mailto:to.jlord@gmail.com">to.jlord@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>
+        <li><a href="im-mel.github.io" target="_blank">github/im-mel</a></li>
         <li><a href="http://www.github.com/jlord" target="_blank">github/jlord</a></li>
       </ul>
     </footer>
